[metadata]
name = scopul
version = 0.0.7
author = SwayamSahoo11742
author_email = swayamsa01@gmail.com
description = A python MIDI file analyzer with a few additional functionality
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SwayamSahoo11742/Scopul
project_urls =
    Bug Tracker = https://github.com/SwayamSahoo11742/Scopul/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
