[metadata]
name = Scopul
version = 1.0.4
author = Swayam Sahoo
author_email = swayamsa01@gmail.com
description = A MIDI file analyzer which allows you to go through components of a MIDI file and extract data. 
long_description = file: long_desc.md
long_description_content_type = text/markdown

url = https://github.com/SwayamSahoo11742/Scopul
project_urls =
    Bug Tracker = https://github.com/SwayamSahoo11742/Scopul/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src